# fusion360-bridge

./: README.md  pyproject.toml
.github/workflows/: release.yml
addin/FusionBridge/: FusionBridge.manifest  FusionBridge.py
server/: fusion_mcp.py
src/fusion360_bridge/: cli.py  server.py
