[project]
name = "fusion360-bridge"
version = "0.2.1"
description = "Control Autodesk Fusion 360 from AI agents: stdio MCP server + localhost HTTP add-in"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["mcp>=1.2.0", "httpx"]

[project.scripts]
fusion360-bridge = "fusion360_bridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fusion360_bridge"]

[tool.hatch.build.targets.wheel.force-include]
"addin/FusionBridge" = "fusion360_bridge/addin/FusionBridge"
